# huh-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
huh/: context.py  llm.py  main.py  shell.py
huh.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
